--- a/base16/schemes/codedark/codedark.yaml
+++ b/base16/schemes/codedark/codedark.yaml
@@ -1,6 +1,6 @@
 scheme: "codedark"
 author: "Tomas Iser (https://github.com/tomasiser)"
-base00: "1E1E1E"
+base00: "#010101"
 base01: "262626"
 base02: "303030"
 base03: "3C3C3C"
